--- a/src/components/DataProcessing/custom_nodes/Dataset.css
+++ b/src/components/DataProcessing/custom_nodes/Dataset.css
@@ -3,7 +3,7 @@
     background: linear-gradient(90deg, rgba(79,54,70,1) 0%, rgba(45,55,72,1) 100%, rgba(0,212,255,1) 100%);
     color:#fff;
     padding:10px;
-    width: 300px;
+    width: 400px;
     font-size: 1.3rem;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px; 
@@ -27,6 +27,7 @@
     text-align: left;
     padding-top:5px;
     padding-left:15px;
+    padding:20px;
 }
 
 .dataset-toolbox-btn{
