--- a/src/components/DataProcessing/dialogs/DataSelectDialog/DataSelectDialog.css
+++ b/src/components/DataProcessing/dialogs/DataSelectDialog/DataSelectDialog.css
@@ -4,3 +4,24 @@
     flex-direction: row;
     justify-content: space-around;
 }
+
+.spinner {
+
+    width: 250px;
+    height: 250px;
+    border: 4px solid #333;
+    border-top: 4px solid #007bff; /* Change the color of the spinner here */
+    border-radius: 50%;
+    margin-left:40%;
+    animation: spin 1s linear infinite;
+}
+
+.loading-text{
+    margin-top:30px;
+    font-size: 1.3rem;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
